# AutoSim-Circuit

./: README.md
CUDA-FastBEV-main/: =2023  CMakeLists.txt  odometry.csv
CUDA-FastBEV-main/src/: main.cpp  main_one.cpp  main_ori.cpp
CUDA-FastBEV-main/tool/: clean.py  draw.py  draw683.py  draw_1.py  draw_3.py  draw_3_new.py  draw_3_op.py  draw_bound.py  draw_cv.py  drawall.py  environment.sh  video.py
System-under-test/catkin_ws/devel/: setup.sh
System-under-test/catkin_ws/devel/include/scale_truck_control/: AckermannDrive.h  lane_coef.h  lrc2ocr.h  xav2lrc.h
System-under-test/catkin_ws/devel/include/scale_truck_control_msgs/: lane.h  lrc2ocr.h  ocr2lrc.h  xav2lrc.h
System-under-test/catkin_ws/devel/lib/laser_filters/: generic_laser_filter_node  scan_to_cloud_filter_chain  scan_to_scan_filter_chain  test_scan_filter_chain
System-under-test/catkin_ws/devel/lib/obstacle_detector/: obstacle_extractor_node  obstacle_publisher_node  scans_merger_node
System-under-test/catkin_ws/devel/lib/pkgconfig/: cv_bridge.pc  geometry_msgs.pc  nav_msgs.pc  rplidar_ros.pc  scale_truck_control.pc  scale_truck_control_msgs.pc  shape_msgs.pc  stereo_msgs.pc  trajectory_msgs.pc  visualization_msgs.pc
System-under-test/catkin_ws/devel/lib/scale_truck_control/: speedtest
System-under-test/catkin_ws/src/ackermann_msgs/: AckermannDriveStamped.h
carla-ros-bridge/catkin_ws/devel/: .catkin  .rosinstall
carla-ros-bridge/catkin_ws/devel/lib/pcl_recorder/: pcl_recorder_node
carla-ros-bridge/catkin_ws/devel/lib/pkgconfig/: carla_ackermann_control.pc  carla_ackermann_msgs.pc  carla_ad_agent.pc  carla_ad_demo.pc  carla_common.pc  carla_manual_control.pc  carla_msgs.pc  carla_ros_bridge.pc  carla_ros_scenario_runner.pc  carla_ros_scenario_runner_types.pc  carla_spawn_objects.pc  carla_twist_to_control.pc  carla_walker_agent.pc  carla_waypoint_publisher.pc  carla_waypoint_types.pc  pcl_recorder.pc  ros_compatibility.pc  rqt_carla_control.pc  rviz_carla_plugin.pc
catkin_ws/devel/: .catkin
catkin_ws/devel/include/laser_filters/: SpeckleFilterConfig.h
catkin_ws/devel/include/scale_truck_control/: lane.h  lrc2xav.h  ocr2lrc.h
catkin_ws/devel/include/scale_truck_control_msgs/: lane_coef.h  lrc2xav.h
catkin_ws/devel/lib/actionlib_msgs/: genaction.py
catkin_ws/devel/lib/obstacle_detector/: obstacle_tracker_node
catkin_ws/devel/lib/pkgconfig/: actionlib_msgs.pc  carla_msgs.pc  diagnostic_msgs.pc  image_geometry.pc  laser_filters.pc  obstacle_detector.pc  opencv_tests.pc  scale_truck_control_lane_detector.pc  sensor_msgs.pc  usb_cam.pc
catkin_ws/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
catkin_ws/devel/lib/scale_truck_control/: LRC  scale_truck_control
catkin_ws/devel/lib/usb_cam/: usb_cam_node
catkin_ws/devel/share/actionlib_msgs/cmake/: actionlib_msgs-extras.cmake  actionlib_msgsConfig.cmake
catkin_ws/devel/share/carla_msgs/cmake/: carla_msgs-msg-extras.cmake
catkin_ws/devel/share/geometry_msgs/cmake/: geometry_msgsConfig.cmake
catkin_ws/devel/share/laser_filters/cmake/: laser_filtersConfig.cmake
catkin_ws/src/ackermann_msgs/: AckermannDrive.h
(+176 files in other folders)
